--- a/modules/scheme/SConscript
+++ b/modules/scheme/SConscript
@@ -26,6 +26,7 @@ Scripts    = ["boot.scm",
 			  "tricks.ss",
 			  "poly-tools.ss",
 			  "pixels-tools.ss",
+              "voxels-tools.ss",
 			  "maths.ss",
 			  "testing.ss",
 			  "planetarium.ss",
