--- a/modules/fluxus-openal/SConscript
+++ b/modules/fluxus-openal/SConscript
@@ -7,15 +7,19 @@ Import("env", "BinaryModulesLocation", "MZDYN", "static_modules")
 
 if env['PLATFORM'] == 'darwin':
 	Target = "fluxus-openal_ss.dylib"
+elif env['PLATFORM'] == 'win32':
+	Target = "fluxus-openal_ss.dll"
 else:
 	Target = "fluxus-openal_ss.so"
 
 if static_modules: Target = "fluxus-openal_ss"
 
 Install = BinaryModulesLocation
-Libs = []
-if env['PLATFORM'] != 'darwin':
-	Libs = ['openal']
+
+if env['PLATFORM'] == 'darwin': Libs = []
+elif env['PLATFORM'] == 'win32': Libs = ['libmzsch3m_6ncc9s', 'openal32']
+else: Libs=['openal']
+
 Frameworks = []
 
 Source = Split("src/FluxAudio.cpp \
