--- a/modules/material/SConscript
+++ b/modules/material/SConscript
@@ -37,7 +37,8 @@ Textures =   ["textures/gradient.png",
               "textures/track.png",
               "textures/transp.png",
               "textures/lights.png",
-			  "textures/splat.png"]
+			  "textures/splat.png",
+              "textures/fluxus-icon.png"]
 
 TxtsInvaders = ["textures/invaders/barricade.png",
 			  "textures/invaders/invader00.png",
