--- a/modules/SConscript
+++ b/modules/SConscript
@@ -1,6 +1,6 @@
 # -*- mode: python -*-
 ###############################################################
-# Top level SConscript for the fluxus PLT modules
+# Top level SConscript for the fluxus RACKET modules
 #
 # Sets up common stuff, and calls each module SConscript 
 
