--- a/modules/fluxus-midi/SConscript
+++ b/modules/fluxus-midi/SConscript
@@ -1,7 +1,7 @@
 ###############################################################
 # SConscript for fluxus-midi
 #
-# This is the main PLT module for the fluxus midi functions
+# This is the main RACKET module for the fluxus midi functions
 
 Import("env", "BinaryModulesLocation", "MZDYN", "static_modules")
 
@@ -26,7 +26,7 @@ if env['PLATFORM'] == 'posix':
 elif env['PLATFORM'] == 'darwin':
 	Libs = []
 	env.Append(CCFLAGS = ' -D__MACOSX_CORE__')
-	Frameworks = ['CoreMIDI', 'CoreAudio', 'CoreFoundation', 'PLT_MrEd']
+	Frameworks = ['CoreMIDI', 'CoreAudio', 'CoreFoundation', 'Racket']
 
 if static_modules:
 	env.StaticLibrary(source = Source, 
