--- a/addons/video/SConscript
+++ b/addons/video/SConscript
@@ -43,6 +43,8 @@ elif env['PLATFORM'] == 'posix':
 
 if env['PLATFORM'] == 'darwin':
 	Frameworks += ['Racket']
+elif env['PLATFORM'] == 'posix':
+	env.Append(CXXFLAGS = ' -D__STDC_CONSTANT_MACROS')
 
 # check installed libraries
 if not GetOption('clean'):
