shader-set! vector parameter size fix added CHECK_GL_ERRORS macro

--- a/libfluxus/SConscript
+++ b/libfluxus/SConscript
@@ -58,7 +58,8 @@ Source = Split("src/PData.cpp \
 		src/ImagePrimitive.cpp \
 		src/FFGLManager.cpp \
 		src/VoxelPrimitive.cpp \
-		src/DDSLoader.cpp"
+		src/DDSLoader.cpp \
+		src/DebugGL.cpp"
 		)
 				
 env.StaticLibrary(source = Source, target = Target)
